--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.15.7
+  carousel_slider: ^4.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
