--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,16 @@ dependencies:
     sdk: flutter
   intl: ^0.15.7
   carousel_slider: ^4.1.1
+  auto_size_text: ^2.1.0
+  http: ^0.12.0+4
+  share: ^0.6.3+6
+  dio: ^3.0.10
+  enum_to_string: ^1.0.14
+  equatable: ^1.2.6
+  flutter_hooks: ^0.15.0
+  hooks_riverpod: ^0.12.4
+  html_character_entities: ^0.1.2+4
+  meta: ^1.2.4
 
 
   # The following adds the Cupertino Icons font to your application.
