alteração na home

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   timezone:
   provider:
   audioplayers: ^0.10.0
+  fl_chart:
+  line_icons:
 
 
   # The following adds the Cupertino Icons font to your application.
